...
                                <constraints>
                                    <constraint firstAttribute="width" constant="200" id="0GT-Aa-nTH"/>
                                    <constraint firstAttribute="height" constant="30" id="Vl4-Mf-Dpi"/>
                                    <constraint firstAttribute="width" constant="170" id="oOw-9M-Cej"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="Login with Email"/>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="0GT-Aa-nTH"/>
                                    </mask>
                                </variation>
                                <variation key="widthClass=compact">
...
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="FXc-Zl-Hvg"/>
                                    <constraint firstAttribute="width" constant="170" id="WAa-In-gLT"/>
                                    <constraint firstAttribute="width" constant="200" id="wNS-yp-K6q"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="Login with Facebook"/>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="wNS-yp-K6q"/>
                                    </mask>
                                </variation>
                                <variation key="widthClass=compact">
...
            </objects>
            <point key="canvasLocation" x="1502" y="602"/>
        </scene>
        <!--Login-->
        <scene sceneID="yff-qY-epn">
            <objects>
                <viewController title="Login" id="2Qt-Qm-Wfs" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="6F8-Kf-emM"/>
                        <viewControllerLayoutGuide type="bottom" id="Hnm-Mr-xo1"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="vxP-Fc-x7y">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="johnny.appleseed@icloud.com" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="F3C-Kf-UwP" userLabel="Login Email Field">
                                <rect key="frame" x="175" y="114" width="250" height="30"/>
                                <animations/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="YV9-PW-wDn"/>
                                    <constraint firstAttribute="width" constant="250" id="vvZ-Qh-Ujh"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="••••••••••••••••" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="liu-EE-WaF" userLabel="Login Password Field">
                                <rect key="frame" x="175" y="194" width="250" height="30"/>
                                <animations/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="250" id="1bm-Mw-lnP"/>
                                    <constraint firstAttribute="height" constant="30" id="yji-z0-6rP"/>
                                </constraints>
...
                                <color key="backgroundColor" red="0.01176470588" green="0.47450980390000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="nLb-C9-IeD"/>
                                    <constraint firstAttribute="width" constant="130" id="tli-yC-UU0"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="Create Account"/>
                                <connections>
                                    <segue destination="BN2-ZC-ikD" kind="unwind" unwindAction="rewindToEventView:" id="y47-cU-L6K"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r7r-Pb-oTG">
                                <rect key="frame" x="305" y="268" width="50" height="21"/>
...
