...
                            <constraint firstAttribute="trailing" secondItem="LQV-47-r4b" secondAttribute="trailing" id="Osq-kR-vaf"/>
                            <constraint firstItem="LQV-47-r4b" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="X7o-nQ-bNr"/>
                            <constraint firstItem="hec-fb-xJE" firstAttribute="width" secondItem="tsR-hK-woN" secondAttribute="width" id="b1U-4K-Fpg"/>
                            <constraint firstItem="LQV-47-r4b" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="jit-li-zVQ"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Group Info" id="tx0-j7-03P"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1149" y="-873"/>
        </scene>
        <!--Map View Controller-->
...
                        <viewControllerLayoutGuide type="bottom" id="Djb-ko-YwX"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="687"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u7p-9a-g84" userLabel="Map">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="687"/>
                                <animations/>
                            </mapView>
                        </subviews>
                        <animations/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
...
                        <sections/>
                        <connections>
                            <outlet property="dataSource" destination="EuT-v3-GYL" id="Mip-Tf-DMa"/>
                            <outlet property="delegate" destination="EuT-v3-GYL" id="fFK-IQ-zVa"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Chat" id="Ioe-mj-jeR"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="kdg-BX-yVR" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1149" y="860"/>
        </scene>
        <!--Second-->
        <scene sceneID="TSa-Jk-nz8">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fge-FL-opu" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Second" image="second" id="cPa-gy-q4n"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hcn-32-D8B">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <animations/>
                    </navigationBar>
...
